--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
-language: generic
-sudo: required
+language: node_js
+node_js:
+ - 11.6.0
+cache: npm
 
-services:
-  - docker
-
-before_install:
-  - docker build -t oslawdev/cv -f Dockerfile .
+install:
+  - npm install
 
 script:
-  - docker run -e CI=true oslawdev/cv npm run test
-
-after_success:
-  - docker build -t oslawdev/cv .
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push oslawdev/cv
+  - npm test
+  - npm run build
