--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-addons-perf": "^15.4.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-styled-components": "^0.1.11",
     "webpack-merge": "^5.7.2"
   },
   "devDependencies": {
