--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
     "react-styled-components": "^0.1.11",
