--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ node_js:
  - 11.6.0
 cache: npm
 
-script:
-  - npm run test
-script:
-  - npm run build
+jobs:
+  include:
+    - stage: test
+      script: npm run test
+    - stage: build
+      script: npm run build
