--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,12 @@ language: node_js
 node_js:
  - 11.6.0
 cache: npm
-notifications:
-    email: false
-    slack: stampede-production:JBtLOLYw1Hoq2VIl1ZiQFxWC
-    on_success: always
-    on_failure: always 
-      template:
-        - "Repo `%{repository_slug}` *%{result}* build (<%{build_url}|#%{build_number}>) for commit (<%{compare_url}|%{commit}>) on branch `%{branch}`."
-        - "Execution time: *%{duration}*"
-        - "Message: %{message}"
-        
+
+
 jobs:
   include:
     - stage: test
       script: npm run test
+      after_success: curl -X POST -H 'Content-type: application/json' --data '{"text":"Unit test finished!"}' https://hooks.slack.com/services/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
     - stage: build
       script: npm run build
