--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ cache: npm
 notifications:
   slack:
     on_success: always
-    
+    on_failure: always 
+    on_start: always 
+    on_cancel: always 
+    on_error: always 
+
 jobs:
   include:
     - stage: test
       script: npm run test
     - stage: build
-      script: npm run build
+      script: npm run start
