Fix file loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
       "noEmit": false,
       "isolatedModules": true,
       "strictNullChecks": false,
-      "esModuleInterop": false,
+      "esModuleInterop": true,
       "jsx": "react",
       "typeRoots": [
         "src/*",
