--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "cannon": "^0.6.2",
     "drei": "^2.2.12",
     "react": "^17.0.1",
     "react-addons-perf": "^15.4.2",
@@ -29,6 +30,7 @@
     "react-styled-components": "^0.1.11",
     "react-three-fiber": "^5.3.10",
     "three": "^0.123.0",
+    "use-cannon": "^0.5.3",
     "webpack-merge": "^5.7.2"
   },
   "devDependencies": {
